update on mobile view, wishlist fix

--- a/src/styles/GameCard.css
+++ b/src/styles/GameCard.css
@@ -5,16 +5,16 @@
   box-shadow: 0 0 15px #a733ff;
   width: 365px;
   height: 275px;
-  margin: 0px 25px 25px 0px;
+  margin: 20px 25px 25px 0px;
   position: relative;
-};
+}
 
 .Gamecard .mainPoster img {
   border-radius: 20px;
 }
 
-.Gamecard i{
-  position:absolute;
+.Gamecard i {
+  position: absolute;
   top: 16px;
   right: 20px;
   font-size: 25px;
