--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -57,7 +57,9 @@
   font-size: 30px;
 }
 .HomePage .dropdown-content {
+  margin-top: 0;
   position: absolute;
+  z-index: 10;
   background: #040e1a;
   box-shadow: 0 0 15px #0d4383;
   border: 1.5px solid #99d4fe;
